tests/neg/i6795-b.scala
sealed def y: Int = 1 // error
